resources/sass/app.scss
@import './colors';
@import './mixins';
@import './shared';

.top-navigation {
    position: fixed;
    top: 30px;
    right: 30px;
    z-index: 99;
    float: right;

    &__burger {
        background: white url('./images/hamburger_icon.svg') no-repeat 50%;
        border-radius: 5px;
        border: 1px solid $black;
        height: 36px;
        width: 40px;

        @include desktop {
            display: none;
        }
    }

    &__desktop {
        @include mobile {
            display: none;
        }
    }

    &__link {
        border-radius: 5px;
        border: 1px solid $silver;
        color: $black;
        display: inline-block;
        margin-left: 15px;
        padding: 10px;
        text-align: center;
        text-decoration: none;
        width: 70px;

        &:hover {
            background: $white;
            border-color: $accent;
        }
    }
}

.mobile-navigation {
    background: $backdrop;
    display: flex;
    height: 100vh;
    justify-content: flex-end;
    position: fixed;
    right: 0;
    top: 0;
    width: 100vw;
    z-index: 100;

    &__box {
        align-content: center;
        align-items: center;
        background: white;
        border-radius: 5px;
        border: 1px solid $black;
        display: flex;
        flex-direction: column;
        height: 180px;
        justify-content: space-around;
        padding: 10px 25px;
        width: 130px;
    }

    &__link {
        background: $black;
        border-radius: 5px;
        border: 1px solid $black;
        color: $white;
        display: inline-block;
        padding: 15px;
        text-align: center;
        text-decoration: none;
        width: 100%;
    }
}

.header {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: center;
    text-align: center;

    @include desktop {
        max-height: 70vw;
    }

    .intro-description {
        font-size: 1.5vw;
        letter-spacing: .75vw;

        @include mobile {
            font-size: 3vw;
            letter-spacing: 1vw;
            line-height: 5vw;
        }

        // only break slogan for mobile
        @include desktop {
            > br {
                display: none;
            }
        }
    }
}

.work {
    display: flex;
    height: 50vh;

    @include desktop {
        height: 100vh;
        max-height: 70vw;
    }

    &__box {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        max-width: 300px;
        padding: 8vw 5vw 5vw;

        > p {
            font-size: 16px;
            line-height: 22px;
            padding: 15px;

            @include mobile {
                display: none;
            }
        }
    }

    &.weareglow {
        background-image: url('./images/weareglow.jpg');
        background-position: 50% 50%;
        background-repeat: no-repeat;
        background-size: cover;
    }

    &.criteo {
        background-color: #717171;
        background-image: url('./images/criteo2.jpg');
        background-position: 50% 50%;
        background-repeat: no-repeat;
        background-size: cover;
        color: $white;
    }
}

.footer {
    background-image: url('./images/cards.jpg');
    background-position: right top;
    background-size: 86%;

    &__box {
        display: flex;
        flex-direction: column;
        height: 100vh;
        max-width: 250px;
        padding: 8vw 5vw 5vw;

        @include desktop {
            max-height: 70vw;
        }

        .contact {
            margin-top: 40px;
            padding: 5px;
            background-color: hsla(0, 0%, 80%, .18);
            line-height: 24px;

            @include mobile {
                font-size: 2.5vw;
                line-height: 5vw;
            }

            &__email {
                background: url('./images/mail.svg') no-repeat;
                background-size: contain; // must be AFTER background!
                display: block;
                margin-bottom: 20px;
                padding-left: 35px;

                @include mobile {
                    font-size: 13px;
                    line-height: 20px;
                }
            }

            &__phone {
                background: url('./images/phone.svg') no-repeat;
                background-size: contain;
                display: block;
                margin-bottom: 20px;
                padding-left: 35px;

                @include mobile {
                    font-size: 13px;
                    line-height: 20px;
                }
            }

            &__btn {
                background: white url('./images/contact.svg') no-repeat 10%;
                background-size: contain;
                border-radius: 5px;
                border: 1px solid $black;
                font-size: 18px;
                font-weight: 200;
                padding: 10px 20px 10px 69px;

                &:hover {
                    border-color: $accent;
                }
            }
        }
    }

}

.copyrights {
    background: #797979;
    color: #bfbfbf;
    font-size: 12px;
    padding: 20px 35px;
    text-align: center;
}

.contact-modal {
    align-items: center;
    background: $backdrop;
    display: flex;
    height: 100vh;
    justify-content: center;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 100;

    &__box {
        background: $silver;
        border: 5px solid $black;
        height: 70vh;
        width: 70vh;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 10px 10vw;
    }

    &__header {
        display: flex;
        justify-content: space-between;
        margin-bottom: 30px;

        > h3 {
            white-space: nowrap;
        }

        > button {
            align-items: center;
            background: transparent;
            border: none;
            display: flex;
            font-weight: 200;
            line-height: 40px;

            &:hover {
                color: $accent;
            }

            > span {
                font-size: 17px;

                @include mobile {
                    display: none;
                }
            }

            > b {
                font-size: 50px;
                text-indent: 5px;
            }
        }
    }

    &__email {
        height: 30px;
    }

    &__message {
        height: 200px;
    }

    &__submit {
        background: $white;
        border-radius: 5px;
        border: 1px solid $black;
        font-size: 18px;
        margin: 30px auto 0;
        padding: 6px;
        width: 50%;

        &:hover {
            border-color: $accent;
        }
    }

    &__success {
        background: url('./images/success.svg');
        background-size: contain;
        border-radius: 100px;
        border: 20px solid $success;
        height: 100px;
        margin: 30px auto;
        width: 100px;
    }

}

